--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ button:focus-visible {
 
 canvas#canvas{
   margin-inline: auto;
-  width: 100%;
+  width: 100%vw;
   height: 100vh;
-  border: 1px red solid;
+  
 }
